Added a string validator class and put in validation for DB entries

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLite": "Data Source=(Dsn=SQLite3)"
+    "SQLite": "Data Source=C:\\personal\\Registration.db"
 
   }
 }
